tests/paczka1/small_fuzzy/76823164.err
Error in line 2: TSrH3YHk0 A59 64,8
Error in line 3: A59 S793 38,4
Error in line 15: A59 A681 12,6
